--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -6,9 +6,11 @@ First we’ll set the default position of the sidebar off-screen. When the activ
   top: 0;
   left: -300px;
   width: 300px;
-  height: 100%;
+  height: 100%; 
   background-color: peru;
   transition: left 300ms ease-out;
+/*new code */    
+    bottom: 0;
 }
 .sidebar.active {
   left: 0;
